--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
        </header>
         <main class="content">
             <section class="recipes" id="recipes">
-                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background_image_recipes">
+                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background__image_recipes">
                 <header class="background_image_recipes"></header>
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
                 </p>
                 <div class="recipes__videos">
                  <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uR3LSs6IowWjT5xE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uR3LSs6IowWjT5xE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>Recipes</span><span> ~5 min </span></p>
                  </div>
                  <div>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=mo95EKrip5rWjRe7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <iframe src="https://www.youtube.com/embed/st571DYYTR8?si=mo95EKrip5rWjRe7" title="YouTube video player"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>Press Recipe</span><span>~15 min</span></p>
                  </div>
                 </div>
@@ -72,7 +72,6 @@
             <section class="about"></section>
         </main>
 
-        </footer>
     </div>
 </body>
 </html>
