--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
               Welcome to our study zone! We've got the coffee to energize you
               and the cozy vibes to help you get creative.
           </p>
-          <div class="header__footer">
+          <footer class="header__footer">
           <div>
             <p class="header__paragraphs">Hours</p>
             <p class="header__paragraphs">Monday-Friday(10:00-19:00)</p>
             <p class="header__paragraphs">Saturday-Sunday(11:00-1800)</p>
            </div>
             <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
-          </div>
+          </footer>
           <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
        </header>
         <main class="content">
