--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
               Welcome to our study zone! We've got the coffee to energize you
               and the cozy vibes to help you get creative.
           </p>
-          <footer class="header__footer">
+          <div class="header__footer">
           <div>
             <p class="header__paragraphs">Hours</p>
             <p class="header__paragraphs">Monday-Friday(10:00-19:00)</p>
             <p class="header__paragraphs">Saturday-Sunday(11:00-1800)</p>
            </div>
             <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
-          </footer>
+          </div>
           <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
        </header>
         <main class="content">
             <section class="recipes" id="recipes">
-                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background_image_recipes">
+                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background--background-image-recipes">
                 <header class="background_image_recipes"></header>
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
@@ -61,7 +61,7 @@
                    <p class="recipes__video-caption"><span>Recipes</span><span> ~5 min </span></p>
                  </div>
                  <div>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=mo95EKrip5rWjRe7" title="YouTube video player"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=mo95EKrip5rWjRe7" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>Press Recipe</span><span>~15 min</span></p>
                  </div>
                 </div>
