New update for my project

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             <p class="header__paragraphs">Saturday-Sunday(11:00-1800)</p>
            </div>
             <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
-          </div>
+        </div>
           <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
        </header>
         <main class="content">
             <section class="recipes" id="recipes">
-                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background--background-image-recipes">
+                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background background--image-recipes">
                 <header class="background_image_recipes"></header>
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
@@ -71,7 +71,6 @@
             <section class="menu"></section>
             <section class="about"></section>
         </main>
-
     </div>
 </body>
 </html>
