New update for my project

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
        </header>
         <main class="content">
             <section class="recipes" id="recipes">
-                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="background background--image-recipes">
-                <header class="background_image_recipes"></header>
+                <div src="./images/background_recipes.svg" class="background--image-recipes"></header>
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
                 </p>
@@ -71,6 +70,7 @@
             <section class="menu"></section>
             <section class="about"></section>
         </main>
+        <footer class="footer"></footer>
     </div>
 </body>
 </html>
