--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
                      />
                 <ul class="nav__links">
                     <li class="nav"><a href="#recipes" class="nav__link">Recipes</a></li>
-                    <li class="nav"><a href="" class="nav__link">Book a Table</a></li>
-                    <li class="nav"><a href="" class="nav__link">Menu</a></li>
-                    <li class="nav"><a href="" class="nav__link">Contacts</a></li>
+                    <li class="nav"><a href="#book" class="nav__link">Book a Table</a></li>
+                    <li class="nav"><a href="#menu" class="nav__link">Menu</a></li>
+                    <li class="nav"><a href="#contact" class="nav__link">Contacts</a></li>
                 </ul>
             </nav>
+            <img src="./images/header-image.jpg" alt="Header Image" class="header__image">
             <h1 class="header__title">
               <span class="header__span-accent"> Specialty Coffee</span> in the Triple Peaks Library
             </h1>
@@ -38,39 +39,38 @@
               Welcome to our study zone! We've got the coffee to energize you
               and the cozy vibes to help you get creative.
           </p>
-          <div class="header__footer">
-          <div>
-            <p class="header__paragraphs">Hours</p>
-            <p class="header__paragraphs">Monday-Friday(10:00-19:00)</p>
-            <p class="header__paragraphs">Saturday-Sunday(11:00-1800)</p>
-           </div>
-            <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
-        </div>
-          <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
        </header>
+          <footer class="footer">
+            <div>
+              <p class="header__paragraphs">Hours</p>
+              <p class="header__paragraphs">Monday-Friday(10:00-19:00)</p>
+              <p class="header__paragraphs">Saturday-Sunday(11:00-18:00)</p>
+            </div>
+            <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
+          </footer>
+          <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
         <main class="content">
             <section class="recipes" id="recipes">
-                <div src="./images/background_recipes.svg" class="background--image-recipes"></header>
+                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="recipes__background-image">
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
                 </p>
                 <div class="recipes__videos">
                  <div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uR3LSs6IowWjT5xE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>Recipes</span><span> ~5 min </span></p>
                  </div>
                  <div>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=mo95EKrip5rWjRe7" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>Press Recipe</span><span>~15 min</span></p>
                  </div>
                 </div>
             </section>
-            <section class="recipes"></section>
-            <section class="reservation"></section>
-            <section class="menu"></section>
-            <section class="about"></section>
+            <section class="reservation" id="book"></section>
+            <section class="menu" id="menu"></section>
+            <section class="about" id="contact"></section>
         </main>
-        <footer class="footer"></footer>
     </div>
 </body>
 </html>
+
