--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </h1>
           <p class="header__description">
               Welcome to our study zone! We've got the coffee to energize you
-              and the cozy vibes to help you get creative.
+              and<span>the cozy vibes to help you get creative.</span>
           </p>
        </header>
           <footer class="footer">
@@ -51,22 +51,75 @@
           <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
         <main class="content">
             <section class="recipes" id="recipes">
-                <img src="./images/background_recipes.svg" alt="Recipes Circles" class="recipes__background-image">
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
                 </p>
                 <div class="recipes__videos">
                  <div>
                     <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                   <p class="recipes__video-caption"><span>Recipes</span><span> ~5 min </span></p>
+                   <p class="recipes__video-caption"><span>Aeropress Recipe</span><span> ~5 min </span></p>
                  </div>
                  <div>
                    <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                   <p class="recipes__video-caption"><span>Press Recipe</span><span>~15 min</span></p>
+                   <p class="recipes__video-caption"><span>French Press Recipe</span><span>~15 min</span></p>
                  </div>
                 </div>
             </section>
-            <section class="reservation" id="book"></section>
+            <section class="reservation" id="book">
+              <h2 class="reservation__title">Book a table</h2>
+              <form class="reservation__form form">
+                <fieldset class="form__fieldset">
+                  <label for="name-input" class="form__label">
+                    Name *
+                    <input
+                    required
+                    type="text"
+                    class="form__input"
+                    id="name-input"
+                    placeholder="Name Surname"
+                    />
+                  </label>
+                  <label for="guests-input" class="form__label">
+                    Number of guests *
+                    <input
+                      required
+                      class="form__input"
+                      id="guests-input"
+                      type="number"
+                      min="1"
+                      max="8"
+                      placeholder="1-8"
+                    />
+                  </label>
+                  <label for="date-input" class="form__label">
+                    Date & time *
+                    <input
+                    required
+                    type="datetime-local"
+                    class="form__input"
+                    id="date-input"
+                    />
+                  </label>
+                  <label for="email-input" class="form__label">
+                    Your email *
+                   <input
+                    class="form__input"
+                    type="email"
+                    placeholder="email@email.com"
+                    id="email-input"
+                    />
+                  </label>
+                </fieldset>
+                <button class="form__button">Book a Table</button>
+                <label for="" class="form__label form__label_type_checkbox">
+                 <input
+                  class="form__checkbox"
+                  id="checkbox-input"
+                  type="checkbox" />
+                  I Agree with the Terms of Use
+                </label>
+              </form>
+            </section>
             <section class="menu" id="menu"></section>
             <section class="about" id="contact"></section>
         </main>
