--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   </label>
                 </fieldset>
                 <button class="form__button">Book a Table</button>
-                <label for="" class="form__label form__label_type_checkbox">
+                <label for="checkbox" class="form__label form__label_type_checkbox">
                  <input
                   class="form__checkbox"
                   id="checkbox-input"
