New update for my project

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <label for="checkbox" class="form__label form__label_type_checkbox">
                  <input
                   class="form__checkbox"
-                  id="checkbox-input"
+                  id="checkbox"
                   type="checkbox" />
                   I Agree with the Terms of Use
                 </label>
