--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
             <h1 class="header__title">
               <span class="header__span-accent"> Specialty Coffee</span> in the Triple Peaks Library
             </h1>
+            <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="header__image">
           <p class="header__description">
               Welcome to our study zone! We've got the coffee to energize you
               and<span>the cozy vibes to help you get creative.</span>
           </p>
        </header>
-          <footer class="footer">
+          <footer class="header__footer">
             <div>
               <p class="header__paragraphs">Hours</p>
               <p class="header__paragraphs">Monday-Friday(10:00-19:00)</p>
@@ -48,7 +49,6 @@
             </div>
             <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
           </footer>
-          <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="image">
         <main class="content">
             <section class="recipes" id="recipes">
                 <h2 class="recipes__title">Recipes</h2>
@@ -120,9 +120,91 @@
                 </label>
               </form>
             </section>
-            <section class="menu" id="menu"></section>
-            <section class="about" id="contact"></section>
+            <section class="menu" id="menu">
+              <h2 class="menu__title">Menu</h2>
+              <p class="menu__subtitle">We brew coffee locally roasted, Fairtrade certified beans and use biodegradable
+                 cups. All teas from our collection are 2$/cup.</p>
+                 <ul class="menu__cards">
+                  <li class="card">
+                    <h3 class="card__title">Filter</h3>
+                    <ul class="card__list">
+                      <li class="card__list-item">Regular (12oz) <span class="card__list-divider"></span>$1</li>
+                      <li class="card__list-item">Large (16oz) <span class="card__list-divider"></span>$1.25</li>
+                      <li class="card__list-item">XL  (20oz) <span class="card__list-divider"></span>$1.5</li>
+                      <li class="card__list-item">Party Size (24oz, Decaf) <span class="card__list-divider"></span>$1.75</li>
+                      <li class="card__list-item">Iced Coffee (16oz) <span class="card__list-divider"></span>$1.25</li>
+                    </ul>
+                  </li>
+                  <li class="card">
+                    <h3 class="card__title">Espresso</h3>
+                    <ul class="card__list">
+                      <li class="card__list-item">Macchiato <span class="card__list-divider"></span>$2.25</li>
+                      <li class="card__list-item">Cortado <span class="card__list-divider"></span>$2.5</li>
+                      <li class="card__list-item">Mocha (12oz) <span class="card__list-divider"></span>$3</li>
+                      <li class="card__list-item">Sunrise in the Bay Area (decaf) <span class="card__list-divider"></span>$10</li>
+                    </ul>
+                  </li>
+                  <li class="card">
+                    <h3 class="card__title">Baked Goods</h3>
+                    <ul class="card__list">
+                      <li class="card__list-item">Almond Croissant <span class="card__list-divider"></span>$2</li>
+                      <li class="card__list-item">Banana Bread <span class="card__list-divider"></span>$1.75</li>
+                      <li class="card__list-item">Key Lime Pie <span class="card__list-divider"></span>$3</li>
+                      <li class="card__list-item">Blue Velvet Cake <span class="card__list-divider"></span>$3.75</li>
+                      <li class="card__list-item">Web Cookie <span class="card__list-divider"></span>$2</li>
+                      <li class="card__list-item">Fresh Bug'uette <span class="card__list-divider"></span>$0.25</li>
+                    </ul>
+                  </li>
+                 </ul>
+            </section>
+            <section class="about" id="contact">
+              <h2 class="about__title">
+                About the coffee shop
+              </h2>
+              <div class="about__content">
+                <p class="about__paragraph">Our coffee shop is located in the Triple Peaks Library. It features 6
+                  tables and free WiFi.</p>
+                <p class="about__paragraph">Our main mission is keeping guests cozy and energized.</p>
+                <p class="about__paragraph">Besides that, we try to reduce our environmental impact — so we
+                  don't sell single-use cups. But you can buy one of our reusable cups!</p>
+              </div>
+              <div class="about__circle"></div>
+              <div class="about__circle about__circle_animation_blurred"></div>
+            </section>
         </main>
+        <footer class="footer">
+          <div class="footer__content">
+            <img
+              src="../se_project_coffeeshop/images/logo_coffeeshop_light.svg"
+              alt="Triple Espresso Logo"
+              class="footer__logo"
+            />
+            <div class="footer__column">
+              <h3 class="footer__column-heading">Social Media</h3>
+              <ul class="footer__list">
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img
+                    src="../se_project_coffeeshop/images/facebook_white.svg"
+                    alt="Facebook Logo White"
+                    class="footer__social-icon"
+                    />Facebook</a>
+                  </a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img
+                    src="../se_project_coffeeshop/images/instagram_white.svg"
+                    alt="Instagram Logo White"
+                    class="footer__social-icon"
+                    />Facebook</a>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer__copyight">&copy; 2024 Tony Washington</div>
+        </footer>
     </div>
 </body>
 </html>
