--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
               Welcome to our study zone! We've got the coffee to energize you
               and<span>the cozy vibes to help you get creative.</span>
           </p>
-       </header>
           <footer class="header__footer">
             <div>
               <p class="header__paragraphs">Hours</p>
@@ -49,6 +48,7 @@
             </div>
             <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
           </footer>
+       </header>
         <main class="content">
             <section class="recipes" id="recipes">
                 <h2 class="recipes__title">Recipes</h2>
@@ -174,30 +174,27 @@
         </main>
         <footer class="footer">
           <div class="footer__content">
-            <img
-              src="../se_project_coffeeshop/images/logo_coffeeshop_light.svg"
-              alt="Triple Espresso Logo"
-              class="footer__logo"
-            />
+            <img src="./images/logo_coffeeshop_light.svg"
+            alt="Triple Espresso Logo"
+            class="footer__logo" />
             <div class="footer__column">
               <h3 class="footer__column-heading">Social Media</h3>
               <ul class="footer__list">
                 <li class="footer__list-item">
                   <a href="#" class="footer__social-link">
                     <img
-                    src="../se_project_coffeeshop/images/facebook_white.svg"
+                    src="images/facebook_white.svg"
                     alt="Facebook Logo White"
-                    class="footer__social-icon"
-                    />Facebook</a>
+                    class="footer__social-icon" />
+                    Facebook
                   </a>
                 </li>
                 <li class="footer__list-item">
                   <a href="#" class="footer__social-link">
                     <img
-                    src="../se_project_coffeeshop/images/instagram_white.svg"
+                    src="images/instagram_white.svg"
                     alt="Instagram Logo White"
-                    class="footer__social-icon"
-                    />Facebook</a>
+                    class="footer__social-icon" />Instagram
                   </a>
                 </li>
               </ul>
