--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Coffee Shop</title>
 </head>
 <body>
-    <div class="page">
+    <div class="pages">
        <header class="header">
             <nav class="nav">
                 <img src="./images/logo_coffeeshop_dark.svg"
@@ -25,10 +25,10 @@
                      class="nav__logo"
                      />
                 <ul class="nav__links">
-                    <li class="nav"><a href="#recipes" class="nav__link">Recipes</a></li>
-                    <li class="nav"><a href="#book" class="nav__link">Book a Table</a></li>
-                    <li class="nav"><a href="#menu" class="nav__link">Menu</a></li>
-                    <li class="nav"><a href="#contact" class="nav__link">Contacts</a></li>
+                    <li class=""><a href="#recipes" class="nav__link">Recipes</a></li>
+                    <li class=""><a href="#book" class="nav__link">Book a Table</a></li>
+                    <li class=""><a href="#menu" class="nav__link">Menu</a></li>
+                    <li class=""><a href="#contact" class="nav__link">Contacts</a></li>
                 </ul>
             </nav>
             <img src="./images/header-image.jpg" alt="Header Image" class="header__image">
@@ -38,13 +38,13 @@
             <img src="./images/inside_coffee_shop.png" alt="Inside the coffee shop" class="header__image">
           <p class="header__description">
               Welcome to our study zone! We've got the coffee to energize you
-              and<span>the cozy vibes to help you get creative.</span>
+              and the cozy vibes to help you get creative.
           </p>
           <footer class="header__footer">
             <div>
-              <p class="header__paragraphs">Hours</p>
-              <p class="header__paragraphs">Monday-Friday(10:00-19:00)</p>
-              <p class="header__paragraphs">Saturday-Sunday(11:00-18:00)</p>
+              <p class="header__paragraph">Hours</p>
+              <p class="header__paragraph">Monday-Friday(10:00-19:00)</p>
+              <p class="header__paragraph">Saturday-Sunday(11:00-18:00)</p>
             </div>
             <p class="header__paragraphs">200 Success Avenue, The Town of Triple Peaks</p>
           </footer>
@@ -56,11 +56,11 @@
                 </p>
                 <div class="recipes__videos">
                  <div>
-                    <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>Aeropress Recipe</span><span> ~5 min </span></p>
                  </div>
                  <div>
-                   <iframe class="recipes__iframe" width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                    <p class="recipes__video-caption"><span>French Press Recipe</span><span>~15 min</span></p>
                  </div>
                 </div>
@@ -200,7 +200,7 @@
               </ul>
             </div>
           </div>
-          <div class="footer__copyight">&copy; 2024 Tony Washington</div>
+          <p class="footer__copyright">&copy; 2024 Tony Washington</p>
         </footer>
     </div>
 </body>
