Update for my project

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="description" content="Coffee Shop Landing Page" >
-    <meta name="author" content="Software Engineer" >
-    <meta name="keywords" content="HTML, CSS" >
-    <link rel="stylesheet" href="pages/index.css" >
-    <link rel="stylesheet" href="vendor/normalize.css" >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Coffee Shop Landing Page" />
+    <meta name="author" content="Software Engineer" />
+    <meta name="keywords" content="HTML, CSS" />
+    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
-    >
-    <link rel="icon" type="image/x-icon" href="favicon.ico" >
+    />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <title>Coffee Shop</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
             src="./images/logo_coffeeshop_dark.svg"
             alt="Dark Logo"
             class="nav__logo"
-          >
+          />
           <ul class="nav__links">
             <li class=""><a href="#recipes" class="nav__link">Recipes</a></li>
             <li class=""><a href="#book" class="nav__link">Book a Table</a></li>
@@ -38,7 +38,7 @@
           src="./images/header-image.jpg"
           alt="Header Image"
           class="header__image"
-        >
+        />
         <h1 class="header__title">
           <span class="header__span-accent"> Specialty Coffee</span> in the
           Triple Peaks Library
@@ -47,7 +47,7 @@
           src="./images/inside_coffee_shop.png"
           alt="Inside the coffee shop"
           class="header__image"
-        >
+        />
         <p class="header__description">
           Welcome to our study zone! We've got the coffee to energize you and
           the cozy vibes to help you get creative.
@@ -111,7 +111,7 @@
                   class="form__input"
                   id="name-input"
                   placeholder="Name Surname"
-                >
+                />
               </label>
               <label for="guests-input" class="form__label">
                 Number of guests *
@@ -123,7 +123,7 @@
                   min="1"
                   max="8"
                   placeholder="1-8"
-                >
+                />
               </label>
               <label for="date-input" class="form__label">
                 Date & time *
@@ -132,7 +132,7 @@
                   type="datetime-local"
                   class="form__input"
                   id="date-input"
-                >
+                />
               </label>
               <label for="email-input" class="form__label">
                 Your email *
@@ -141,12 +141,12 @@
                   type="email"
                   placeholder="email@email.com"
                   id="email-input"
-                >
+                />
               </label>
             </fieldset>
             <button class="form__button">Book a Table</button>
             <label for="checkbox" class="form__label form__label_type_checkbox">
-              <input class="form__checkbox" id="checkbox" type="checkbox" >
+              <input class="form__checkbox" id="checkbox" type="checkbox" />
               I Agree with the Terms of Use
             </label>
           </form>
@@ -249,7 +249,7 @@
             src="./images/logo_coffeeshop_light.svg"
             alt="Triple Espresso Logo"
             class="footer__logo"
-          >
+          />
           <div class="footer__column">
             <h3 class="footer__column-heading">Social Media</h3>
             <ul class="footer__list">
@@ -259,7 +259,7 @@
                     src="images/facebook_white.svg"
                     alt="Facebook Logo White"
                     class="footer__social-icon"
-                  >
+                  />
                   Facebook
                 </a>
               </li>
@@ -269,7 +269,7 @@
                     src="images/instagram_white.svg"
                     alt="Instagram Logo White"
                     class="footer__social-icon"
-                  >Instagram
+                  />Instagram
                 </a>
               </li>
             </ul>
