--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Coffee Shop Landing Page" />
     <meta name="author" content="Software Engineer" />
     <meta name="keywords" content="HTML, CSS" />
-    <link rel="stylesheet" href="pages/index.css" />
     <link rel="stylesheet" href="vendor/normalize.css" />
+    <link rel="stylesheet" href="pages/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,7 @@
     <title>Coffee Shop</title>
   </head>
   <body>
-    <div class="pages">
+    <div class="page">
       <header class="header">
         <nav class="nav">
           <img
@@ -34,11 +34,6 @@
             <li class=""><a href="#contact" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
-        <img
-          src="./images/header-image.jpg"
-          alt="Header Image"
-          class="header__image"
-        />
         <h1 class="header__title">
           <span class="header__span-accent"> Specialty Coffee</span> in the
           Triple Peaks Library
@@ -58,7 +53,7 @@
             <p class="header__paragraph">Monday-Friday(10:00-19:00)</p>
             <p class="header__paragraph">Saturday-Sunday(11:00-18:00)</p>
           </div>
-          <p class="header__paragraphs">
+          <p class="header__paragraph">
             200 Success Avenue, The Town of Triple Peaks
           </p>
         </div>
